--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "croquy-expense-tracker-next-js",
   "version": "0.1.0",
   "private": true,
-  "title": "Croquy Expense Tracker",
+  "title": "Croquextra",
   "description": "A simple expense tracker web site",
   "license": "MIT",
   "author": "Croquignolex",
@@ -25,10 +25,16 @@
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "i18next": "^23.15.2",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.2",
+    "react-secure-storage": "^1.3.2",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
