--- a/package.json
+++ b/package.json
@@ -30,15 +30,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "i18next": "^23.15.2",
-    "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.6.2",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
+    "next-intl": "^3.21.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^15.0.2",
     "react-secure-storage": "^1.3.2",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
