--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": true,
     "plugins": [
       {
         "name": "next"
@@ -27,7 +28,7 @@
     ],
     "paths": {
       "@/*": [
-        "./*"
+        "./src/*"
       ]
     }
   },
