--- a/.env.exemple
+++ b/.env.exemple
@@ -3,5 +3,12 @@ REACT_APP_API_BASE_URL="http://localhost:8000"
 NEXT_PUBLIC_APP_NAME="Croquextra"
 NEXT_PUBLIC_APP_VERSION="0.1.0"
 NEXT_PUBLIC_APP_FULL_NAME="Croquy Expense Tracker"
+
+NEXT_PUBLIC_APP_AUTHOR="Croquignolex"
+NEXT_PUBLIC_APP_AUTHOR_URL="https://croquignolex.pages.dev/"
+
+NEXT_PUBLIC_APP_REPO="Github"
+NEXT_PUBLIC_APP_REPO_URL="https://github.com/Croquignolex/croquy-expense-tracker-next-ts.git/"
+
 NEXT_PUBLIC_SECURE_LOCAL_STORAGE_HASH_KEY="XXXX"
 NEXT_PUBLIC_SECURE_LOCAL_STORAGE_PREFIX="cext"
