--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@tanstack/react-query": "^5.59.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
