--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-secure-storage": "^1.3.2",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0",
@@ -60,9 +61,9 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
     "prettier": "^3.3.3",
-    "tsx": "^4.19.1"
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.1",
+    "typescript": "^5"
   }
 }
